fixed issue with contrast button

--- a/css/highContrast.css
+++ b/css/highContrast.css
@@ -127,7 +127,7 @@ section {
 
 #access-btn {
     position: absolute;
-    top: 3vh;
+    top: 10vh;
     right: 1rem;
     font-size: 1.5rem;
 }
@@ -294,6 +294,10 @@ footer a:hover {
 @media (min-width: 768px) {
     #home-contact>.btn {
         font-size: 1.2rem;
+    }
+
+    #access-btn {
+        top: 3vh;
     }
 
     #about-attr {
